Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h1>¿Serías mi Valentí en este desfile negro? 🖤🥀</h1>
+    <h1>¿Serías mi Valentín en este desfile negro? 🖤🥀</h1>
 
     <div class="botones">
         <button id="si">Sí, siempre 🖤</button>
@@ -154,3 +154,4 @@
 </body>
 
 </html>
+
